<resources>
    <string name="app_name">CruddyPizza</string>
    <string name="Title">Cruddy Pizza</string>

    <string name="MakeOrderEN">Make Order</string>
    <string name="MakeOrderFR">Passer Commande</string>

    <string name="ViewOrderEN">View Orders</string>
    <string name="ViewOrderFR">Voir les Commandes</string>

    <string name="ButtonEnglishEN">English</string>
    <string name="ButtonEnglishFR">Anglais</string>

    <string name="ButtonFrenchEN">French</string>
    <string name="ButtonFrenchFR">Français</string>

    <!--Customer Information View-->
    <string name="CustInfoTitleEN">Customer Information</string>
    <string name="CustInfoTitleFR">Informations Client</string>

    <string name="CustNameEN">Name:</string>
    <string name="CustNameFR">Nom:</string>

    <string name="CustAddressEN">Address:</string>
    <string name="CustAddressFR">Adresse:</string>

    <string name="CustPhoneEN">Phone Number:</string>
    <string name="CustPhoneFR">Numéro de Téléphone:</string>

    <string name="CustNameErrorEN">Customer name is required</string>
    <string name="CustNameErrorFR">Le nom du client est requis</string>

    <string name="CustAddressErrorEN">Customer address is required</string>
    <string name="CustAddressErrorFR">L\'adresse du client est obligatoire</string>

    <string name="CustPhoneErrorEN">Customer phone number is required</string>
    <string name="CustPhoneErrorFR">Le numéro de téléphone du client est requis</string>

    <string name="buttonMakePizzaEN">Start Order</string>
    <string name="buttonMakePizzaFR">Lancer la Commande</string>

    <string name="buttonCancelEN">Cancel</string>
    <string name="buttonCancelFR">Annuler</string>

    <!--MAKE PIZZA VIEW-->
    <string name="MakePizzaTitleEN">Make Pizza</string>
    <string name="MakePizzaTitleFR">Faire des Pizzas</string>

    <string name="MakePizzaSizeTitleEN">Pick a Size:</string>
    <string name="MakePizzaSizeTitleFR">Choisir la Taille:</string>

    <string name="MakePizzaSizeEN">Size:</string>
    <string name="MakePizzaSizeFR">Taille:</string>

    <string-array name="sizes_EN">
        <item>Small</item>
        <item>Medium</item>
        <item>Large</item>
    </string-array>
    <string-array name="sizes_FR">
        <item>Petite</item>
        <item>Moyenne</item>
        <item>Grande</item>
    </string-array>

    <string name="MakePizzaToppingsEN">Pick Toppings:</string>
    <string name="MakePizzaToppingsFR">Choisir les Garnitures:</string>

    <string-array name="ingredients_EN">
        <item>Mushrooms</item>
        <item>Bacon</item>
        <item>Onions</item>
        <item>Extra Cheese</item>
        <item>Pepperoni</item>
        <item>Sausage</item>
    </string-array>
    <string-array name="ingredients_FR">
        <item>Champignons</item>
        <item>Lard</item>
        <item>Oignons</item>
        <item>Fromage Supplémentaire</item>
        <item>Pepperoni</item>
        <item>Saucisson</item>
    </string-array>

    <string name="MaxIngredientsMessageEN">Maximum of %1$d toppings</string>
    <string name="MaxIngredientsMessageFR">Maximum de %1$d garnitures</string>

    <string name="MakePizzaPlaceOrderEN">Place Order</string>
    <string name="MakePizzaPlaceOrderFR">Passer la Commande</string>

    <string name="SizeChoiceErrorEN">Please pick a size</string>
    <string name="SizeChoiceErrorFR">Veuillez choisir une taille</string>

    <string name="ToppingChoiceErrorEN">Please choose at least one topping</string>
    <string name="ToppingChoiceErrorFR">Veuillez choisir au moins une garniture</string>

    <!--Activity Order placed view-->
    <string name="orderPlacedTitleEN">Order Placed</string>
    <string name="orderPlacedTitleFR">Commande Passée</string>

    <string name="orderPlacedNoToppingsEN">No toppings</string>
    <string name="orderPlacedNoToppingsFR">Aucune garnitures</string>

    <string name="orderPlacedSizeEN">Size:</string>
    <string name="orderPlacedSizeFR">Taille:</string>

    <string name="orderPlacedToppingsEN">Toppings:</string>
    <string name="orderPlacedToppingsFR">Garnitures:</string>

    <string name="orderPlacedCustomerInfoEN">Customer Info:</string>
    <string name="orderPlacedCustomerInfoFR">Informations client:</string>

    <string name="orderPlacedCustomerHomeEN">Finish</string>
    <string name="orderPlacedCustomerHomeFR">Terminer</string>

    <!--View orders-->
    <string name="viewOrdersTitleEN">View Orders</string>
    <string name="viewOrdersTitleFR">Coir les Commandes</string>

    <string name="orderEN">Order #</string>
    <string name="orderFR">Ordre #</string>

    <string name="viewOrdersBackEN">Back</string>
    <string name="viewOrdersBackFR">Retour</string>

    <string name="viewOrdersInProgressEN">In-progress</string>
    <string name="viewOrdersInProgressFR">En cours</string>

    <!--Order details-->
    <string name="orderDetailsCompleteEN">Complete</string>
    <string name="orderDetailsCompleteFR">Complète</string>

    <string name="orderDetailsEditEN">Edit</string>
    <string name="orderDetailsEditFR">Éditer</string>

    <string name="orderDetailsDeleteEN">Delete</string>
    <string name="orderDetailsDeleteFR">Effacer</string>

    <!--Edit Order-->
    <string name="editOrderTitleEN">Edit Order</string>
    <string name="editOrderTitleFR">Modifier</string>

    <string name="editOrderSaveEN">Save</string>
    <string name="editOrderSaveFR">Enregistrer</string>

</resources>