<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Order_Details">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textViewOrderDetailsTitle"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.2"
            android:fontFamily="sans-serif-black"
            android:gravity="center"
            android:text="@string/orderEN"
            android:textColor="#FFFFFF"
            android:textSize="40sp" />

        <TextView
            android:id="@+id/textViewOrderDateTime"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.05"
            android:fontFamily="sans-serif-medium"
            android:gravity="center"
            android:textColor="#FFFFFF"
            tools:text="12-07-2022 05:06:30" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="20dp"
            android:layout_weight="0.225"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="20dp"
            app:contentPadding="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textViewOrderDetailsSize"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-black"
                    android:gravity="center"
                    android:text="@string/orderPlacedSizeEN"
                    android:textColor="#000000"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/textViewOrderDetailsSizeSelection"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif-medium"
                    android:gravity="center"
                    android:text="Medium"
                    android:textColor="#000000"
                    android:textSize="16sp"
                    tools:text="Medium" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="20dp"
            android:layout_weight="0.3"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="20dp"
            app:contentPadding="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textViewOrderDetailsToppings"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-black"
                    android:gravity="center"
                    android:text="@string/orderPlacedToppingsEN"
                    android:textColor="#000000"
                    android:textSize="18sp" />

                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp">

                    <TextView
                        android:id="@+id/textViewOrderDetailsIngredientsInfo"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:fontFamily="sans-serif-medium"
                        android:gravity="center"
                        android:text="Pepperoni x 3\nCheese x 2"
                        android:textColor="#000000"
                        android:textSize="16sp"
                        tools:text="Pepperoni x 3\nCheese x 2" />
                </ScrollView>

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="20dp"
            android:layout_weight="0.4"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="20dp"
            app:contentPadding="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textViewOrderDetailsCustInfo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-black"
                    android:gravity="center"
                    android:text="@string/orderPlacedCustomerInfoEN"
                    android:textColor="#000000"
                    android:textSize="18sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="10dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/textViewOrderDetailsCustName"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="sans-serif-black"
                            android:gravity="start"
                            android:text="@string/CustNameEN"
                            android:textColor="#000000"
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/textViewOrderDetailsCustNameInfo"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="5dp"
                            android:fontFamily="sans-serif-medium"
                            android:text="Armand"
                            android:textColor="#000000"
                            android:textSize="16sp"
                            tools:text="Armand" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/textViewOrderDetailsCustAddress"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="sans-serif-black"
                            android:gravity="start"
                            android:text="@string/CustAddressEN"
                            android:textColor="#000000"
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/textViewOrderDetailsCustAddressInfo"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="5dp"
                            android:fontFamily="sans-serif-medium"
                            android:text="1065 Barrington"
                            android:textColor="#000000"
                            android:textSize="16sp"
                            tools:text="1065 Barrington" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/textViewOrderDetailsCustPhone"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="sans-serif-black"
                            android:gravity="start"
                            android:text="@string/CustPhoneEN"
                            android:textColor="#000000"
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/textViewOrderDetailsCustPhoneInfo"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="5dp"
                            android:fontFamily="sans-serif-medium"
                            android:text="9029893419"
                            android:textColor="#000000"
                            android:textSize="16sp"
                            tools:text="9029893419" />
                    </LinearLayout>
                </LinearLayout>

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.4"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/buttonOrderDetailsComplete"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/button_1"
                    android:text="@string/orderDetailsCompleteEN" />

                <Button
                    android:id="@+id/buttonOrderDetailsBack"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/button_1"
                    android:text="@string/viewOrdersBackEN" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/buttonOrderDetailsEdit"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/button_2"
                    android:text="@string/orderDetailsEditEN" />

                <Button
                    android:id="@+id/buttonOrderDetailsDelete"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/button_2"
                    android:text="@string/orderDetailsDeleteEN" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>