<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".CustomerEntry">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textViewMakePizzaTitle"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:fontFamily="sans-serif-black"
            android:gravity="center|center_horizontal"
            android:text="@string/CustInfoTitleEN"
            android:textColor="@color/white"
            android:textSize="48sp" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="20dp"
            android:layout_weight="1.2"
            app:cardCornerRadius="20dp">

            <TableLayout
                android:id="@+id/tabelLayoutCustomerInfo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/white"
                android:gravity="center"
                android:padding="10dp"
                android:shrinkColumns="0,1">

                <TableRow
                    android:id="@+id/tableRowName"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_gravity="center|center_horizontal|center_vertical"
                    android:layout_weight="1"
                    android:gravity="center">

                    <TextView
                        android:id="@+id/textViewName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:fontFamily="sans-serif-black"
                        android:text="@string/CustNameEN"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="18sp" />

                    <EditText
                        android:id="@+id/editTextTextCustName"
                        android:layout_width="wrap_content"
                        android:layout_height="45dp"
                        android:layout_margin="10dp"
                        android:background="@drawable/edittext_style"
                        android:ems="10"
                        android:inputType="textPersonName"
                        android:padding="5dp"
                        android:textColor="@color/black" />
                </TableRow>

                <TableRow
                    android:id="@+id/tableRowAddress"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_gravity="center|center_horizontal|center_vertical"
                    android:layout_weight="1"
                    android:gravity="center">

                    <TextView
                        android:id="@+id/textViewAddress"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:fontFamily="sans-serif-black"
                        android:text="@string/CustAddressEN"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="18sp" />

                    <EditText
                        android:id="@+id/editTextTextCustAddress"
                        android:layout_width="wrap_content"
                        android:layout_height="45dp"
                        android:layout_margin="10dp"
                        android:background="@drawable/edittext_style"
                        android:ems="10"
                        android:inputType="textPersonName"
                        android:padding="5dp"
                        android:textColor="@color/black" />
                </TableRow>

                <TableRow
                    android:id="@+id/tableRowNumber"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_gravity="center|center_horizontal|center_vertical"
                    android:layout_weight="1"
                    android:gravity="center">

                    <TextView
                        android:id="@+id/textViewPhone"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:fontFamily="sans-serif-black"
                        android:text="@string/CustPhoneEN"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="18sp" />

                    <EditText
                        android:id="@+id/editTextTextCustPhone"
                        android:layout_width="wrap_content"
                        android:layout_height="45dp"
                        android:layout_margin="10dp"
                        android:background="@drawable/edittext_style"
                        android:ems="10"
                        android:inputType="none|phone"
                        android:padding="5dp"
                        android:textColor="@color/black" />
                </TableRow>

            </TableLayout>
        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/buttonStartOrder"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="20dp"
            android:layout_weight="0.26"
            android:backgroundTint="@color/button_1"
            android:fontFamily="sans-serif-black"
            android:text="@string/buttonMakePizzaEN"
            android:textSize="20sp" />

        <Button
            android:id="@+id/buttonCustCancel"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="20dp"
            android:layout_weight="0.26"
            android:backgroundTint="@color/button_2"
            android:fontFamily="sans-serif-black"
            android:text="@string/buttonCancelEN"
            android:textSize="20sp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>